Pull request #20: Model functions
Merge in TO/sr-1615-it-toads from model-functions to master

Squashed commit of the following:

commit c8faaffa664996d76dfa4d6e9a336e1570b32f37
Author: Barbara Wojtarowicz <305453@student.agh.edu.pl>
Date:   Wed Dec 15 01:58:54 2021 +0100

    Pull request #19: BasiaW

    Merge in TO/sr-1615-it-toads from BasiaW to model-functions

    Squashed commit of the following:

    commit e4fa038a72966bd4789b58c1a6eac45611db094f
    Author: basiav <82549088+basiav@users.noreply.github.com>
    Date:   Wed Dec 15 01:57:29 2021 +0100

        Dalek movement working

    commit 718aa1ec8e0e1ddcd7a853b8fc45a830f2117a5f
    Author: basiav <82549088+basiav@users.noreply.github.com>
    Date:   Wed Dec 15 00:11:07 2021 +0100

        Dalek's movement repaired, added some tests

    commit 71d88e122042d544863ae3c73f8252c2552a6d02
    Merge: d45b373 b5dd1f4
    Author: basiav <82549088+basiav@users.noreply.github.com>
    Date:   Mon Dec 13 00:29:57 2021 +0100

        Merge branch 'model-functions' of https://bitbucket.lab.ii.agh.edu.pl/scm/to/sr-1615-it-toads into BasiaW

    commit d45b373f77cbce2981cf4c52a4395beb550805e4
    Author: basiav <82549088+basiav@users.noreply.github.com>
    Date:   Mon Dec 13 00:24:27 2021 +0100

        gridSetUp back in Engine constructor

    commit d2b8b933e98b08eefa56c5ca6c4ea11d767780ef
    Merge: 93ce455 ef9abb5
    Author: basiav <82549088+basiav@users.noreply.github.com>
    Date:   Sun Dec 12 20:44:20 2021 +0100

        Merge branch 'model-functions' of https://bitbucket.lab.ii.agh.edu.pl/scm/to/sr-1615-it-toads into BasiaW

    commit 93ce455879faa12c802fdf4604de05ae412138c7
    Author: basiav <82549088+basiav@users.noreply.github.com>
    Date:   Sun Dec 12 20:40:47 2021 +0100

        Program building & running, although with mistakes; ex. souting messages about doctor-doctor collision, so some multiple doctor problem xd

    commit dd773b135a73cf465a50c555b134e96708a2162e
    Merge: b12a09d 21a47d2
  

--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -48,7 +48,7 @@
                   <Insets />
                </HBox.margin>
                <image>
-                  <Image url="@../image/baby_yoda.png" />
+                  <Image url="@../image/doctor_daleks.png" />
                </image>
             </ImageView>
             <Label alignment="CENTER_RIGHT" text="Welcome to IT-Toads project">
