--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -1,49 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0"
-            style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/17"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
-    <center>
-        <Canvas fx:id="canvas" height="600.0" width="900.0" BorderPane.alignment="TOP_CENTER">
+<?import javafx.scene.layout.BorderPane?>
+
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+   <center>
+        <Canvas fx:id="canvas" height="600.0" width="900.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets bottom="15.0" left="15.0" right="15.0"/>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </BorderPane.margin>
         </Canvas>
-    </center>
-    <top>
-        <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-              prefHeight="200.0"
-              prefWidth="1280.0" style="-fx-border-color: lightgray;" BorderPane.alignment="CENTER_LEFT">
-            <BorderPane.margin>
-                <Insets bottom="30.0" left="15.0" right="15.0" top="15.0"/>
-            </BorderPane.margin>
-            <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
-            </padding>
-            <ImageView fitHeight="180.0" pickOnBounds="true" preserveRatio="true">
-                <HBox.margin>
-                    <Insets/>
-                </HBox.margin>
-                <Image url="@../image/doctor_daleks.png"/>
-            </ImageView>
-            <Label alignment="CENTER_RIGHT" text="Welcome to IT-Toads project">
-                <HBox.margin>
-                    <Insets bottom="5.0" left="20.0" right="5.0" top="5.0"/>
-                </HBox.margin>
-                <padding>
-                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
-                </padding>
-                <font>
-                    <Font name="Comic Sans MS" size="38.0"/>
-                </font>
-            </Label>
-        </HBox>
-    </top>
+   </center>
 </BorderPane>
