Pull request #28: Teleport + TimeTurner skeleton
Merge in TO/sr-1615-it-toads from teleport to master

Squashed commit of the following:

commit f100ac85a16e8d5224fa8dddf974d764c4b0c9f3
Author: bkulawska <kulawska1507@gmail.com>
Date:   Sun Jan 16 00:45:16 2022 +0100

    code refactor

commit 028cbcfc778afac5f72367579c50550ff9f683f0
Author: bkulawska <kulawska1507@gmail.com>
Date:   Sat Jan 15 23:22:22 2022 +0100

    delete unnecessary setters and handlers

commit 5043a4b151c75cac9cd155687feeee267cd4005f
Author: bkulawska <kulawska1507@gmail.com>
Date:   Thu Jan 13 22:24:03 2022 +0100

    create time turner model

commit cc8beacbfe4ead2af27ef60e3e59c3d7317784fa
Author: bkulawska <kulawska1507@gmail.com>
Date:   Thu Jan 13 21:19:06 2022 +0100

    create teleport model

--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -3,13 +3,30 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Button?>
 
 <BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
-   <center>
+    <center>
         <Canvas fx:id="canvas" height="600.0" width="900.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </BorderPane.margin>
         </Canvas>
-   </center>
+    </center>
+    <right>
+        <Button fx:id="teleportButton" BorderPane.alignment="CENTER" onAction="#handleUseTeleport">
+            <BorderPane.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </BorderPane.margin>
+            Teleports: 0
+        </Button>
+    </right>
+    <left>
+        <Button fx:id="timeTurnerButton" BorderPane.alignment="CENTER" onAction="#handleUseTimeTurner">
+            <BorderPane.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </BorderPane.margin>
+            Time Turners: 0
+        </Button>
+    </left>
 </BorderPane>
