--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <center>
@@ -13,20 +14,23 @@
             </BorderPane.margin>
         </Canvas>
     </center>
-    <right>
-        <Button fx:id="teleportButton" BorderPane.alignment="CENTER" onAction="#handleUseTeleport">
-            <BorderPane.margin>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </BorderPane.margin>
-            Teleports: 0
-        </Button>
-    </right>
-    <left>
-        <Button fx:id="timeTurnerButton" BorderPane.alignment="CENTER" onAction="#handleUseTimeTurner">
-            <BorderPane.margin>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </BorderPane.margin>
-            Time Turners: 0
-        </Button>
-    </left>
+   <right>
+      <VBox alignment="TOP_CENTER" prefWidth="150.0" BorderPane.alignment="TOP_CENTER">
+         <children>
+              <Button fx:id="timeTurnerButton" onAction="#handleUseTimeTurner" prefWidth="120.0" text="Time Turners">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+                  Time Turners: 0
+              </Button>
+              <Button fx:id="teleportButton" onAction="#handleUseTeleport" prefWidth="120.0" text="Teleports" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </VBox>
+   </right>
 </BorderPane>
