--- a/src/main/resources/view/mainView.fxml
+++ b/src/main/resources/view/mainView.fxml
@@ -3,32 +3,49 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1110.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <center>
-        <Canvas fx:id="canvas" height="600.0" width="900.0" BorderPane.alignment="CENTER">
-            <BorderPane.margin>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </BorderPane.margin>
-        </Canvas>
+      <AnchorPane style="-fx-border-color: grey;" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
+         <children>
+              <Canvas fx:id="canvas" height="600.0" nodeOrientation="INHERIT" width="900.0" />
+         </children>
+      </AnchorPane>
     </center>
    <right>
-       <VBox alignment="TOP_CENTER" prefWidth="150.0" BorderPane.alignment="TOP_CENTER">
+       <VBox alignment="TOP_CENTER" prefWidth="150.0" style="-fx-border-color: grey;" BorderPane.alignment="TOP_CENTER">
            <BorderPane.margin>
-               <Insets bottom="20.0" right="20.0" top="20.0"/>
+               <Insets bottom="20.0" right="20.0" top="20.0" />
            </BorderPane.margin>
            <padding>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
            </padding>
+         <Label fx:id="levelNumberLabel" alignment="CENTER" layoutY="100.0" prefWidth="120.0" style="-fx-background-color: lightgrey;" text="Level" textAlignment="CENTER">
+            <font>
+               <Font size="17.0" />
+            </font>
+            <VBox.margin>
+               <Insets bottom="30.0" top="20.0" />
+            </VBox.margin>
+            <padding>
+               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+         </Label>
            <Button fx:id="timeTurnerButton" onAction="#handleUseTimeTurner" prefWidth="120.0" text="Time Turners">
             <VBox.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </VBox.margin>
                Time Turners: 0
            </Button>
-           <Button fx:id="teleportButton" onAction="#handleUseTeleport" prefWidth="120.0" text="Teleports"/>
+           <Button fx:id="teleportButton" onAction="#handleUseTeleport" prefWidth="120.0" text="Teleports" />
        </VBox>
    </right>
 </BorderPane>
